noinst_PROGRAMS = simple composition layertest layertest2 simple2 simple3 composition2 group \
		  simple4


simple_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
simple_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
simple2_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
simple2_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
simple3_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
simple3_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
simple4_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
simple4_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
composition_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
composition_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
composition2_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
composition2_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
layertest_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
layertest_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
layertest2_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
layertest2_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
group_LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
group_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
